name:                happybird-game
version:             0.1.0.0
synopsis:            Play around with gloss and implement happy bird!
description:         Please see README.md
homepage:            http://github.com/khanage/happybird#readme
license:             BSD3
license-file:        LICENSE
author:              Khan Thompson
maintainer:          khanage@gmail.com
copyright:           2010 Khan Thompson
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude
                     , ScopedTypeVariables
                     , TemplateHaskell
  exposed-modules:     Prelude
                     , Control.Update
                     , Data.World
                     , Data.Images
                     , Control.Bird
                     , Control.Render
                     , Data.Pipes
                     , Control.Pipes
  build-depends:       base-noprelude
                     , lens
                     , gloss
                     , gloss-game
                     , gloss-juicy
                     , JuicyPixels
                     , dequeue
                     , linear
                     , classy-prelude
                     , random

executable happybird
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-extensions: OverloadedStrings
                    , NoImplicitPrelude
  build-depends:       base-noprelude
                     , happybird-game
                     , gloss
                     , gloss-game
                     , JuicyPixels
                     , gloss-juicy
                     , dequeue
                     , linear
                     , lens
                     , random
  default-language:    Haskell2010

test-suite game-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , happybird-game
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/khanage/happybird
